Working on edit.

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           <label for="lastName" class="col-form-label">Last name</label>
           <input type="text" class="form-control" id="lastNameEdit">
           <label for="phone" class="col-form-label">Phone number</label>
-          <input type="text" class="form-control" id="fhoneEdit">
+          <input type="text" class="form-control" id="phoneEdit">
           <label for="adress" class="col-form-label">Adress</label>
           <input type="text" class="form-control" id="adressEdit">
         </div>
